--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
     <title>Excursion</title>
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a>Download Excursion (Coming soon)</a></p>
 </head>
 <body>
     
