updating page content

--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -6,10 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
     <title>Excursion</title>
-    <h1>Discover hidden places in the world around you</h1>
-    <p><a>Download Excursion (Coming soon)</a></p>
 </head>
 <body>
+
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a>Download Excursion (Coming soon)</a></p>
+    <!-- below is the video tag without the control attribute, to replicate project mockup-->
+    <video src="./resources/videos/excursion.mp4">Video not supported</video>
+
+    <h1>Discover hidden places in the world around you</h1>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="./resources/images/camp.webp" alt="mobile phone"/></p>
+
+    <p><img src="./resources/images/phone.webp" alt="mobile phone"/></p>
+    <h1>Coming Soon for iPhone and Android</h1>
+    <p><a>Download Excursion (Coming soon)</a></p>
+    <p>© Excursion</p>
     
 </body>
 </html>
