--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -12,7 +12,7 @@
     <h1>Discover hidden places in the world around you</h1>
     <p><a>Download Excursion (Coming soon)</a></p>
     <!-- below is the video tag without the control attribute, to replicate project mockup-->
-    <video src="./resources/videos/excursion.mp4">Video not supported</video>
+    <video src="./resources/videos/excursion.mp4" controls>Video not supported</video>
 
     <h1>Discover hidden places in the world around you</h1>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
