--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -20,7 +20,8 @@
     <p><img src="./resources/images/phone.webp" alt="mobile phone"/></p>
     <h1>Coming Soon for iPhone and Android</h1>
     <p><a>Download Excursion (Coming soon)</a></p>
-    <p>© Excursion</p>
+    
+    <footer><p>© Excursion</p></footer>
     
 </body>
 </html>
