--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>Discover hidden places in the world around you</h1>
-    <p><a>Download Excursion (Coming soon)</a></p>
+    <h5><a href="./index.html">Download Excursion (Coming soon)</a></h5>
     <video src="./resources/videos/excursion.mp4" controls>Video not supported</video>
 
     <h1>Discover hidden places in the world around you</h1>
@@ -19,7 +19,7 @@
 
     <p><img src="./resources/images/phone.webp" alt="mobile phone"/></p>
     <h1>Coming Soon for iPhone and Android</h1>
-    <p><a>Download Excursion (Coming soon)</a></p>
+    <h5><a href="./index.html">Download Excursion (Coming soon)</a></h5>
     
     <footer><p>© Excursion</p></footer>
     
