--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>Discover hidden places in the world around you</h1>
+    <h1 class="header">Discover hidden places in the world around you</h1>
     <h5><a href="./index.html">Download Excursion (Coming soon)</a></h5>
     <video src="./resources/videos/excursion.mp4" controls>Video not supported</video>
 
