--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-    <h1 class="header">Discover hidden places in the world around you</h1>
+    <h1 class="headerMain">Discover hidden places in the world around you</h1>
     <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
     <video autoplay loop>
-        <source src="resources/videos/excursion.mp4" type="video.mp4">not supported</video>
+        <source src="/resources/videos/excursion.mp4" type="video.mp4">not supported</video>
     
-    <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img src="./resources/images/camp.webp" alt="mobile phone"/></p>
+    <h2 class="headerSecond">Your personal travel guide</h2>
+    <h4 class="sub">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+    <p><img src="/resources/images/camp.jpeg" alt="mobile phone"/></p>
 
-    <p><img src="./resources/images/phone.webp" alt="mobile phone"/></p>
+    <p><img src="/resources/images/phone.png" alt="mobile phone"/></p>
     <h1>Coming Soon for iPhone and Android</h1>
     <p><a class="link" href="#">Download Excursion (Coming soon)</a></p>
     
