adding content to html file

--- a/My Website Style Guide/index.html
+++ b/My Website Style Guide/index.html
@@ -5,9 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&family=Quicksand:wght@300;400;700&family=Titillium+Web:ital,wght@0,200;0,900;1,300;1,700&display=swap" rel="stylesheet">
     <title>Website Style Guide</title>
 </head>
 <body>
+    <h1>My Website Style Guide</h1>
     
+    <h2>Colors</h2>
+    <p>Blue</p>
+    <p>Red</p>
+    <p>black</p>
+    <p>Yellow</p>
+    <p>white</p>
+
+    <h2>Fonts</h2>
+    <p>'Open Sans Condensed'</p>
+    <p>'Quicksand'</p>
+    <p>'Titillium Web'</p>
+
+    <h2>Text Styles</h2>
+    <h1>H1: Page heading</h1>
+    <p>Font-weight</p>
+    <p>Font-size</p>
+    <p>Font-family</p>
+
+    <h2>H2: Subheading</h2>
+    <p>Font-weight</p>
+    <p>Font-size</p>
+    <p>Font-family</p>
+
+    <p>Paragraph text</p>
+    <p>Font-weight</p>
+    <p>Font-size</p>
+    <p>Font-family</p>
+
 </body>
 </html>
