updating index and css file

--- a/My Website Style Guide/index.html
+++ b/My Website Style Guide/index.html
@@ -9,35 +9,39 @@
     <title>Website Style Guide</title>
 </head>
 <body>
-    <h1>My Website Style Guide</h1>
+    <h1 id="header">My Website Style Guide</h1>
     
-    <h2>Colors</h2>
-    <p>Blue</p>
-    <p>Red</p>
-    <p>black</p>
-    <p>Yellow</p>
-    <p>white</p>
+    <div class="div">
+        <h2>Colors</h2>
+        <p>Blue</p>
+        <p>Red</p>
+        <p>black</p>
+        <p>Yellow</p>
+        <p>white</p>
+    </div>
 
-    <h2>Fonts</h2>
-    <p>'Open Sans Condensed'</p>
-    <p>'Quicksand'</p>
-    <p>'Titillium Web'</p>
+    <div class="div">
+        <h2>Fonts</h2>
+         <p>'Open Sans Condensed'</p>
+         <p>'Quicksand'</p>
+         <p>'Titillium Web'</p>
+    </div>
 
-    <h2>Text Styles</h2>
-    <h1>H1: Page heading</h1>
-    <p>Font-weight</p>
-    <p>Font-size</p>
-    <p>Font-family</p>
-
-    <h2>H2: Subheading</h2>
-    <p>Font-weight</p>
-    <p>Font-size</p>
-    <p>Font-family</p>
-
-    <p>Paragraph text</p>
-    <p>Font-weight</p>
-    <p>Font-size</p>
-    <p>Font-family</p>
+    <div class="div">
+        <h2>Text Styles</h2>
+        <h1>H1: Page heading</h1>
+        <p>Font-weight</p>
+        <p>Font-size</p>
+        <p>Font-family</p>
+        <h2>H2: Subheading</h2>
+        <p>Font-weight</p>
+        <p>Font-size</p>
+        <p>Font-family</p>
+        <p>Paragraph text</p>
+        <p>Font-weight</p>
+        <p>Font-size</p>
+        <p>Font-family</p>
+    </div>
 
 </body>
 </html>
