--- a/My Website Style Guide/index.html
+++ b/My Website Style Guide/index.html
@@ -13,11 +13,23 @@
     
     <div class="div">
         <h2>Colors</h2>
-        <p>Blue</p>
-        <p>Red</p>
-        <p>black</p>
-        <p>Yellow</p>
-        <p>white</p>
+        <div>
+            <div>
+            <p>Blue</p>
+            </div>
+            <div>
+            <p>Red</p>   
+            </div>
+            <div>
+            <p>black</p>    
+            </div>
+            <div>
+            <p>Yellow</p>    
+            </div>
+            <div>
+            <p>white</p>   
+            </div>
+        </div>  
     </div>
 
     <div class="div">
