added div tags and style for colors box

--- a/My Website Style Guide/index.html
+++ b/My Website Style Guide/index.html
@@ -13,21 +13,26 @@
     
     <div class="div">
         <h2>Colors</h2>
-        <div>
-            <div>
+        <div class="colorBox">
+            <div class="colorBlue">
             <p>Blue</p>
+            <p>#1C51E2</p>
             </div>
-            <div>
-            <p>Red</p>   
+            <div class="colorRed">
+            <p>Red</p>
+            <p>#F83232</p>   
             </div>
-            <div>
+            <div class="colorBlack">
             <p>black</p>    
+            <p>#0000</p>  
             </div>
-            <div>
-            <p>Yellow</p>    
+            <div class="colorYellow">
+            <p id="pColorBlack">Yellow</p> 
+            <p id="pColorBlack">#FFFF00</p>     
             </div>
-            <div>
-            <p>white</p>   
+            <div class="colorWhite">
+            <p id="pColorBlack">white</p>  
+            <p id="pColorBlack">#FFFFFF</p>   
             </div>
         </div>  
     </div>
