finished color block for html and stylesheet

--- a/My Website Style Guide/index.html
+++ b/My Website Style Guide/index.html
@@ -13,24 +13,24 @@
     
     <div class="div">
         <h2>Colors</h2>
-        <div class="colorBox">
-            <div class="colorBlue">
+        <div class="colorDiv">
+            <div class=" colorBox colorBlue">
             <p>Blue</p>
             <p>#1C51E2</p>
             </div>
-            <div class="colorRed">
+            <div class="colorBox colorRed">
             <p>Red</p>
             <p>#F83232</p>   
             </div>
-            <div class="colorBlack">
+            <div class="colorBox colorBlack">
             <p>black</p>    
             <p>#0000</p>  
             </div>
-            <div class="colorYellow">
+            <div class="colorBox colorYellow">
             <p id="pColorBlack">Yellow</p> 
             <p id="pColorBlack">#FFFF00</p>     
             </div>
-            <div class="colorWhite">
+            <div class="colorBox colorWhite">
             <p id="pColorBlack">white</p>  
             <p id="pColorBlack">#FFFFFF</p>   
             </div>
