finishing edits on font styling

--- a/My Website Style Guide/index.html
+++ b/My Website Style Guide/index.html
@@ -23,7 +23,7 @@
             <p>#F83232</p>   
             </div>
             <div class="colorBox colorBlack">
-            <p>black</p>    
+            <p>Black</p>    
             <p>#0000</p>  
             </div>
             <div class="colorBox colorYellow">
@@ -31,7 +31,7 @@
             <p id="pColorBlack">#FFFF00</p>     
             </div>
             <div class="colorBox colorWhite">
-            <p id="pColorBlack">white</p>  
+            <p id="pColorBlack">White</p>  
             <p id="pColorBlack">#FFFFFF</p>   
             </div>
         </div>  
@@ -40,15 +40,24 @@
     <div class="div">
         <h2 id="h2center">Fonts</h2>
         <div class="backgroundDiv">
-            <div class="fontBox OpenSansCondensed">
+            <div class="textBackground OpenSansCondensed">
                <h2>'Open Sans Condensed'</h2> 
                <p>The quick brown fox jumps over the lazy dog.</p>
-               <p>The quick brown fox jumps over the lazy dog.</p>
-               <p>The quick brown fox jumps over the lazy dog.</p>
+               <p class="fontItalic">The quick brown fox jumps over the lazy dog.</p>
+               <p class="fontBold">The quick brown fox jumps over the lazy dog.</p>
             </div>
-         
-         <p>'Quicksand'</p>
-         <p>'Titillium Web'</p>
+            <div class="textBackground quicksand">
+                <h2>'Quicksand'</h2> 
+                <p>The quick brown fox jumps over the lazy dog.</p>
+                <p class="fontItalic">The quick brown fox jumps over the lazy dog.</p>
+                <p class="fontBold">The quick brown fox jumps over the lazy dog.</p>
+             </div>
+             <div class="textBackground titilliumWeb">
+                <h2>'Titillium Web'</h2> 
+                <p>The quick brown fox jumps over the lazy dog.</p>
+                <p class="fontItalic">The quick brown fox jumps over the lazy dog.</p>
+                <p class="fontBold">The quick brown fox jumps over the lazy dog.</p>
+             </div>
         </div>
          
     </div>
