adding background div and defining heading style

--- a/My Website Style Guide/index.html
+++ b/My Website Style Guide/index.html
@@ -64,6 +64,9 @@
 
     <div class="div">
         <h2 id="h2center">Text Styles</h2>
+        <div class="backgroundDiv">
+
+        </div>
         <h1>H1: Page heading</h1>
         <p>Font-weight</p>
         <p>Font-size</p>
@@ -72,7 +75,7 @@
         <p>Font-weight</p>
         <p>Font-size</p>
         <p>Font-family</p>
-        <p>Paragraph text</p>
+        <p id="pBold">Paragraph text</p>
         <p>Font-weight</p>
         <p>Font-size</p>
         <p>Font-family</p>
