finished paragraph styling for text styles

--- a/My Website Style Guide/index.html
+++ b/My Website Style Guide/index.html
@@ -65,20 +65,33 @@
     <div class="div">
         <h2 id="h2center">Text Styles</h2>
         <div class="backgroundDiv">
-
+            <div>
+                <h1>H1: Page heading</h1>
+                <ul>
+                    <li>Font-weight: 700(Bold)</li>
+                    <li>Font-size: 26px</li>
+                    <li>Font-family: Open Sans Condensed</li>
+                </ul>
+            </div>
+            <div>
+                <h2>H2: Subheading</h2>
+                <ul>
+                    <li>Font-weight: 700(Bold)</li>
+                    <li>Font-size: 18px</li>
+                    <li>Font-family: Quicksand</li>
+                </ul>
+            </div>
+            <div>
+                <p id="pBold">Paragraph text</p>
+                <ul>
+                    <li>Font-weight: 700(Bold)</li>
+                    <li>Font-size: 14px</li>
+                    <li>Font-family: Quicksand</li>
+                </ul>
+            </div>
         </div>
-        <h1>H1: Page heading</h1>
-        <p>Font-weight</p>
-        <p>Font-size</p>
-        <p>Font-family</p>
-        <h2>H2: Subheading</h2>
-        <p>Font-weight</p>
-        <p>Font-size</p>
-        <p>Font-family</p>
-        <p id="pBold">Paragraph text</p>
-        <p>Font-weight</p>
-        <p>Font-size</p>
-        <p>Font-family</p>
+        
+        
     </div>
 
 </body>
