adding header and stylesheet properties

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" type="css/text" href="./resources/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div>logo</div>
+        <nav>
+            <ul>
+                <il>Mission</il>
+                <il>Featured Tea</il>
+                <il>Locations</il>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
