adding logo img to html removed div in header

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div>logo</div>
+        <img src="./assets/images/logo.webp" alt="logo" height="50px" >
         <nav>
             <ul>
                 <il>Mission</il>
