adding header class in css and nav tag on html

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -5,18 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea Cozy</title>
-    <link rel="stylesheet" type="css/text" href="./resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
-    <header>
+    
+     <!-- Header -->
+    <nav class="header">
         <img src="./assets/images/logo.webp" alt="logo" height="50px" >
-        <nav>
-            <ul>
-                <il>Mission</il>
-                <il>Featured Tea</il>
-                <il>Locations</il>
-            </ul>
-        </nav>
-    </header>
+        <ul>
+            <li><a>Mission</a></li>
+            <li><a>Featured Tea</a></li>
+             <li><a>Locations</a></li>
+        </ul>
+    </nav>
+
+    <!-- Banner Section -->
+    <div>
+        <div>
+
+        </div>
+    </div>
 </body>
 </html>
