fixing header and removed duplicate stylesheet

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -10,15 +10,16 @@
 <body>
     
      <!-- Header -->
-    <nav class="header">
-        <img src="./assets/images/logo.webp" alt="logo" height="50px" >
-        <ul>
-            <li><a>Mission</a></li>
-            <li><a>Featured Tea</a></li>
+    <header class="header">
+        <img class="img" src="./assets/images/logo.webp" alt="logo">
+        <nav> 
+            <ul>
+                <li><a>Mission</a></li>
+                <li><a>Featured Tea</a></li>
              <li><a>Locations</a></li>
         </ul>
     </nav>
-
+    </header>
     <!-- Banner Section -->
     <div>
         <div>
