working on header

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -11,8 +11,8 @@
     
      <!-- Header -->
     <header class="header">
-        <img class="img" src="./assets/images/logo.webp" alt="logo">
-        <nav> 
+        <img class="logo" src="./assets/images/logo.webp" alt="logo">
+        <nav class="nav"> 
             <ul>
                 <li><a>Mission</a></li>
                 <li><a>Featured Tea</a></li>
