starting mission section

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -20,8 +20,10 @@
         </ul>
     </nav>
     </header>
-    <!-- Banner Section -->
-    <div>
+
+    <!-- Mission Section -->
+    <div class="mission">
+        <img class="" src="./assets/images/mission-background.webp" alt="mission-background">
         <div>
 
         </div>
