mission img completed

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -23,7 +23,7 @@
 
     <!-- Mission Section -->
     <div class="mission">
-        <img class="" src="./assets/images/mission-background.webp" alt="mission-background">
+        <img src="./assets/images/mission-background.webp" alt="mission-image">
         <div>
 
         </div>
