Mission section completed

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -23,9 +23,9 @@
 
     <!-- Mission Section -->
     <div class="mission">
-        
-        <div>
-
+        <div class="mission-quote">
+            <h2>Our Mission</h2>
+            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </div>
 </body>
