starting Tea of the month section

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -28,5 +28,15 @@
             <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </div>
+
+    <!-- Tea Section -->
+    <div>
+        <div>
+            <h2>Our Mission</h2>
+            <h4>What's steeping at The Tea Cozy</h4>
+        </div>
+    </div>
+
+
 </body>
 </html>
