trying to have mission h2 over h4

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -24,14 +24,14 @@
     <!-- Mission Section -->
     <div class="mission">
         <div class="mission-quote">
-            <h2>Our Mission</h2>
+            <h2> Our Mission qqq</h2>
             <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </div>
 
     <!-- Tea Section -->
-    <div>
-        <div>
+    <div class="tea">
+        <div >
             <h2>Our Mission</h2>
             <h4>What's steeping at The Tea Cozy</h4>
         </div>
