finished tea section

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -30,10 +30,28 @@
     </div>
 
     <!-- Tea Section -->
+    <h2>Tea of the Month</h2>
+    <h4>What's steeping at The Tea Cozy</h4>
     <div class="tea">
-        <div >
-            <h2>Our Mission</h2>
-            <h4>What's steeping at The Tea Cozy</h4>
+        <div class="container">
+            <img src="./assets/images/berryblitz.webp" alt="Fall Berry Blitz Tea">
+            <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="container">
+            <img src="./assets/images/rum.webp" alt="Spiced Rum Tea">
+            <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="container">
+            <img src="./assets/images/donut.webp" alt="Seasonal Donuts">
+            <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="container">
+            <img src="./assets/images/donut.webp" alt="Myrtle Ave Tea">
+            <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="container">
+            <img src="./assets/images/bedford-bizarre.webp" alt="Bedford Bizarre Tea">
+            <h4>Bedford Bizarre Tea</h4>
         </div>
     </div>
 
