established location section

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -24,7 +24,7 @@
     <!-- Mission Section -->
     <div class="mission">
         <div class="mission-quote">
-            <h2> Our Mission qqq</h2>
+            <h2> Our Mission</h2>
             <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </div>
@@ -55,6 +55,31 @@
         </div>
     </div>
 
+    <!-- Location Section Section -->
+    <div class="location">
+        <h2 id="location-h2">Locations</h2>
+        <div class="address">
+            <div class="address-box">
+                <h3>Downtown</h3>
+                <p>384 West 4th St</p>
+                <p>Suite 108</p>
+                <p>Portland, Maine</p>
+            </div>
+            <div class="address-box">
+                <h3>Downtown</h3>
+                <p>384 West 4th St</p>
+                <p>Suite 108</p>
+                <p>Portland, Maine</p>
+            </div>
+            <div class="address-box">
+                <h3>Downtown</h3>
+                <p>384 West 4th St</p>
+                <p>Suite 108</p>
+                <p>Portland, Maine</p>
+            </div>
+        </div>
+
+    </div>
 
 </body>
 </html>
