finished footer and completed project

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-     <!-- Header -->
+     <!-- Header Section -->
     <header class="header">
         <img class="logo" src="./assets/images/logo.webp" alt="logo">
         <nav class="nav"> 
@@ -24,7 +24,7 @@
     <!-- Mission Section -->
     <div class="mission">
         <div class="mission-quote">
-            <h2> Our Mission</h2>
+            <h2>Our Mission</h2>
             <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </div>
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <!-- Location Section Section -->
+    <!-- Location Section -->
     <div class="location">
         <h2 id="location-h2">Locations</h2>
         <div class="address">
@@ -78,8 +78,17 @@
                 <p>Portland, Maine</p>
             </div>
         </div>
-
     </div>
 
+    <!-- Footer Section -->
+    <footer>
+        <div class="contact">
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <h5>917-555-8904</h5>
+        </div>
+        <h5 id="footer">copyright The Tea Cozy 2017</h5>
+    </footer>
+    
 </body>
 </html>
