added links to header and style color to seashel

--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -14,23 +14,26 @@
         <img class="logo" src="./assets/images/logo.webp" alt="logo">
         <nav class="nav"> 
             <ul>
-                <li><a>Mission</a></li>
-                <li><a>Featured Tea</a></li>
-             <li><a>Locations</a></li>
+                <li><a href="#mission">Mission</a></li>
+                <li><a href="#featured">Featured Tea</a></li>
+             <li><a href="#location">Locations</a></li>
         </ul>
     </nav>
     </header>
 
     <!-- Mission Section -->
-    <div class="mission">
-        <div class="mission-quote">
-            <h2>Our Mission</h2>
-            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    <div id="mission">
+        <div class="mission">
+            <div class="mission-quote">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
         </div>
-    </div>
+    </di>
+    
 
     <!-- Tea Section -->
-    <h2>Tea of the Month</h2>
+    <h2 id="featured">Tea of the Month</h2>
     <h4>What's steeping at The Tea Cozy</h4>
     <div class="tea">
         <div class="container">
@@ -56,30 +59,31 @@
     </div>
 
     <!-- Location Section -->
-    <div class="location">
-        <h2 id="location-h2">Locations</h2>
-        <div class="address">
-            <div class="address-box">
-                <h3>Downtown</h3>
-                <p>384 West 4th St</p>
-                <p>Suite 108</p>
-                <p>Portland, Maine</p>
-            </div>
-            <div class="address-box">
-                <h3>Downtown</h3>
-                <p>384 West 4th St</p>
-                <p>Suite 108</p>
-                <p>Portland, Maine</p>
-            </div>
-            <div class="address-box">
-                <h3>Downtown</h3>
-                <p>384 West 4th St</p>
-                <p>Suite 108</p>
-                <p>Portland, Maine</p>
+   <div id="location"> 
+       <div class="location">
+            <h2 id="location-h2">Locations</h2>
+            <div class="address">
+                <div class="address-box">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="address-box">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="address-box">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
             </div>
         </div>
     </div>
-
     <!-- Footer Section -->
     <footer>
         <div class="contact">
